Fixed overflow problem with many pie charts

--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -7,6 +7,7 @@ body {
 
 main {
   margin-bottom: 4rem;
+  overflow: hidden;
 }
 
 header.page-header {
